--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ title: Ilja Tkachuk
     <div class="row margin-top">
       <div class="col-sm-6 margin-bottom">
         <ul class="list-group">
-          <li class="list-group-item list-group-item-success text-center">
-            <h1>Things I do like</h1>
+          <li class="list-group-item list-group-item-danger text-center">
+            <h1 class="text-success">Things I do like</h1>
           </li>
           {% for pref in site.data.preferences_positive %}
             <li class="list-group-item flex-center-vertical">
