better official CV PDF generator

--- a/official.html
+++ b/official.html
@@ -22,7 +22,7 @@ title: Ilja Tkachuk
             <br/>
       {% endfor %}
 
-      <button type="button" onClick="html2pdf(document.getElementById('cv'), {margin: 10, filename: 'Ilja-Tkachuk-CV.pdf'})">
+      <button type="button" onClick="savePDF()">
         <strong>
           Download CV as PDF
         </strong>
