add biography to official layout

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: Ilja Tkachuk
         Hello stranger, nice to meet you!
         Sit down, relax and have a cup of functional programming.
         My name is Ilja Tkachuk (also known as timCF).
-        I'm software developer, live in Tallinn, Estonia.
+        I'm software developer, live in Tallinn, Republic of Estonia.
         <br><br>
         {{ site.data.content.summary_p1 }}
         <br><br>
