fix generated PDF

--- a/official.html
+++ b/official.html
@@ -81,7 +81,7 @@ title: Ilja Tkachuk
           <span class="newthought">{{ x.company }}</span>
         </p>
         <p>{{ x.project }}</p>
-        <span>{{ x.dates }}, {{ x.location }}</span>
+        <small>{{ x.dates }}, {{ x.location }}</small>
       </blockquote>
     {% endfor %}
   </section>
